:sparkles: 走马灯效果

--- a/src/riding_lanten.html
+++ b/src/riding_lanten.html
@@ -1,10 +1,10 @@
-# MagicalCss
-some wonderfull css case
-
-* 走马灯效果
-
-```
-     <style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
         .riding{
             height: 25px;
             line-height: 25px;
@@ -23,10 +23,12 @@ some wonderfull css case
             100% {transform: translate(-100%,0);}
         }
     </style>
-
+</head>
+<body>
     <div class="riding">
         <span class="riding_text">
             欢迎前来观看走马灯效果！
         </span>
     </div>
-```
+</body>
+</html>
